--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ contourpy==1.0.7
 cycler==0.11.0
 Flask==2.2.3
 fonttools==4.39.3
+gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.2.0
